# parsenic

./: CHANGELOG.md  Cargo.toml  README.md
src/: buf_writer.rs  buffer.rs  class.rs  cursor.rs  drain.rs  empty.rs  error.rs  lib.rs  num.rs  purge.rs  read.rs  reader.rs  result.rs  seal.rs  seek.rs  write.rs  writer.rs
src/be/: read.rs  write.rs
src/buf/: buffer.rs  mod.rs
src/buffered/: buf_reader.rs  buf_writer.rs  destination.rs  flush.rs  mod.rs  read.rs  source.rs  write.rs
src/io/: destination.rs  mod.rs  receiver.rs  sender.rs  source.rs  truncate.rs
src/le/: read.rs  write.rs
tests/: tests.rs
