[package]
name = "parsenic"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "A simple no-std I/O and parsing crate"
repository = "https://github.com/ardaku/parsenic"
documentation = "https://docs.rs/parsenic"
homepage = "https://github.com/ardaku/parsenic/blob/stable/CHANGELOG.md"
include = [
    "/README.md",
    "/src/",
    "/LICENSE_APACHE",
    "/LICENSE_BOOST",
    "/LICENSE_MIT",
]
keywords = ["parsing", "encoding", "decoding", "format", "io"]
categories = [
    "no-std",
    "no-std::no-alloc",
    "rust-patterns",
    "parsing",
    "filesystem",
]
readme = "README.md"

[dependencies]
traitful = "0.2"
